# streamlit-td

./: .gitignore  README.md  alerts.csv  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/streamlit_td/: alerts.py  app.py  config.py
src/streamlit_td/data/: __init__.py  alerts.csv  dolar.py  tesouro.py
src/streamlit_td/utils/: redis.py
src/streamlit_td/visualization/: __init__.py  graphics.py
